# avendish

./: .clang-format  .gitignore  404.html  AVND_BACKEND_SUPPORT.md  AVND_FEATURE_CATALOG.md  AVND_TEST_HARNESS_PLAN.md  AvendishConfig.cmake  CMakeLists.txt  CUSTOM_UI_PLAN.md  Doxyfile  HELP_PATCH_GENERATION_PLAN.md  LICENSE  LINUX_VALIDATION.md  OUTPUT_VERIFICATION_PLAN.md  README.md  STATE_SUPPORT_DESIGN.md  foreword.html  highlight.js  index.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-07154a40.js  searchindex-643ba6b0.js  searchindex-b76e286d.js  searchindex-bdc8ee8a.js  searchindex.js  searchindex.json  toc-8fccbf1e.js  toc-ae0bcd33.js  toc.html  toc.js
advanced/: bindings.html  channel_mimicking.html  cmake.html  fft.html  injection.html  logging.html  port_types.codeedit.html  port_types.example.html  port_types.file.html  port_types.file.midi.html  port_types.file.raw.html  port_types.file.sound.html  port_types.html  port_types.midifile.html  port_types.rawfile.html  port_types.soundfile.html  presets.html  sample_accurate.example.html  sample_accurate.html  ui.html  ui.layout.html  ui.messages.example.html  ui.messages.html  ui.painting.html  workers.html
book/: book.toml
cmake/: AvendishAddon.cmake  FindBoost.cmake  avendish.clap.cmake  avendish.cmake  avendish.csound.cmake  avendish.dependencies.cmake  avendish.disableexceptions.cmake  avendish.dump.cmake  avendish.example.cmake  avendish.examples.cmake  avendish.fuzz.cmake  avendish.godot.cmake  avendish.godot.smoketest.cmake  avendish.golden.cmake  avendish.gstreamer.cmake  (+22 more)
(+1120 files in other folders)
